--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -242,15 +242,12 @@
 
 
 <section class="kal">
-  <a href="https://wa.me/79370969944/" target="_blank">
-  <div type="button round" class="callback-bt " >
+  <div type="button round" class="callback-bt " data-toggle="modal" data-target="#exampleModal">
     <div class="text-call ">
-      <a href="https://wa.me/79370969944/" target="_blank">
-      <i class="fa fa-phone"></i></a>
-      <span>Записаться</span>
+      <i class="fa fa-phone"></i>
+      <span>Обратный<br>звонок</span>
     </div>
   </div>
-</a>
 </section>
 <section id="section-contacts" class="section-common">
  
