--- a/app/templates/pages/homepage.html
+++ b/app/templates/pages/homepage.html
@@ -6,7 +6,7 @@
         <h2 class="featurette-heading text-center">О нас</h2>
 
         <div class="container">
-          <h3 class="ponts">Миссия</h3>
+          <h3 class="ponts text-center">Миссия</h3>
           <hr>
          <p class="font"> Миссия салона - предоставить клиентам высокий сервис обслуживания и широкий спектр услуг по самым
           демократичным ценам.</p>
@@ -18,7 +18,7 @@
         </div>
 
         <div class="container">
-          <h3 class="ponts"> Этикет</h3>
+          <h3 class="ponts text-center"> Этикет</h3>
           <hr>
           <p class="font"> Мы всегда рады приветствовать клиентов в нашей студии красоты. Мы с благодарностью относимся к выбору и
             мнению клиентов о работе студии, Гордимся доверием наших клиентов!</p>
