--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -583,7 +583,20 @@ footer {
 .map {
   max-width: 600px;
 }
-
+.gotopbtn {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  background: white;
+  bottom: 40px;
+  right: 22px;
+  text-decoration: none;
+  text-align: center;
+  line-height: 50px;
+  color: #333;
+  font-size: 22px;
+  opacity: 0.75;
+}
 /*@media*/
 @media (max-width: 1250px) {
   #header__content {
